[gd_scene load_steps=45 format=3 uid="uid://cusfu02034n3s"]

[ext_resource type="Shader" uid="uid://sxjte3ihd1hp" path="res://Utility/hit_flash.tres" id="1_6av4s"]
[ext_resource type="Script" path="res://Enemies/torre.gd" id="2_cq8xq"]
[ext_resource type="Texture2D" uid="uid://ca612m8dgb4cx" path="res://Art/Estruturas/blood_tower_breaking.png" id="3_ri2vl"]
[ext_resource type="Texture2D" uid="uid://4kbtl27bo0qq" path="res://Art/Estruturas/blood_tower.png" id="4_6e6ew"]
[ext_resource type="PackedScene" uid="uid://0ewdkkjlagl2" path="res://Components/scenes/health_component.tscn" id="4_j1f7u"]
[ext_resource type="PackedScene" uid="uid://bo4pdtdxy3dff" path="res://Components/scenes/hurtbox_component.tscn" id="5_6d43k"]
[ext_resource type="PackedScene" uid="uid://c22hhh4jjwjj0" path="res://Components/scenes/hitbox_component.tscn" id="6_dhby3"]
[ext_resource type="Script" path="res://Components/Resources/hit_stats.gd" id="7_8lqma"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fs7rs"]
shader = ExtResource("1_6av4s")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6eebs"]
shader = ExtResource("1_6av4s")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_q61rn"]
atlas = ExtResource("3_ri2vl")
region = Rect2(0, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kgtp"]
atlas = ExtResource("3_ri2vl")
region = Rect2(100, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd8k0"]
atlas = ExtResource("3_ri2vl")
region = Rect2(200, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_a32ef"]
atlas = ExtResource("3_ri2vl")
region = Rect2(300, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtt5k"]
atlas = ExtResource("3_ri2vl")
region = Rect2(400, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yytf"]
atlas = ExtResource("3_ri2vl")
region = Rect2(500, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihfaq"]
atlas = ExtResource("3_ri2vl")
region = Rect2(600, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_roip0"]
atlas = ExtResource("3_ri2vl")
region = Rect2(700, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_jy551"]
atlas = ExtResource("3_ri2vl")
region = Rect2(800, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_40dri"]
atlas = ExtResource("3_ri2vl")
region = Rect2(900, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrcg1"]
atlas = ExtResource("3_ri2vl")
region = Rect2(1000, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_agj2f"]
atlas = ExtResource("4_6e6ew")
region = Rect2(0, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g7yf"]
atlas = ExtResource("4_6e6ew")
region = Rect2(100, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mvyx"]
atlas = ExtResource("4_6e6ew")
region = Rect2(200, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_uipod"]
atlas = ExtResource("4_6e6ew")
region = Rect2(300, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjd5y"]
atlas = ExtResource("4_6e6ew")
region = Rect2(400, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptn63"]
atlas = ExtResource("4_6e6ew")
region = Rect2(500, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_lryov"]
atlas = ExtResource("4_6e6ew")
region = Rect2(600, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdcea"]
atlas = ExtResource("4_6e6ew")
region = Rect2(700, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrxvf"]
atlas = ExtResource("4_6e6ew")
region = Rect2(800, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxpjp"]
atlas = ExtResource("4_6e6ew")
region = Rect2(900, 0, 100, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lnl0"]
atlas = ExtResource("4_6e6ew")
region = Rect2(1000, 0, 100, 140)

[sub_resource type="SpriteFrames" id="SpriteFrames_ykk2w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q61rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kgtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd8k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a32ef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtt5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yytf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihfaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roip0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jy551")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40dri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrcg1")
}],
"loop": false,
"name": &"death_animation",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_agj2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g7yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mvyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uipod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjd5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptn63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lryov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdcea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrxvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxpjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lnl0")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}]

[sub_resource type="Gradient" id="Gradient_8itv0"]
offsets = PackedFloat32Array(0, 0.775758)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m2761"]
gradient = SubResource("Gradient_8itv0")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_igy62"]
radius = 19.0
height = 81.0588

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8cmuq"]
radius = 19.0
height = 83.4118

[sub_resource type="Resource" id="Resource_5exh3"]
script = ExtResource("7_8lqma")
damage = 1
damageType = 0
knockback = 0.0
cooldown = 0.0
can_damage = true

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_10w6e"]
radius = 19.0
height = 84.7059

[sub_resource type="Animation" id="Animation_tb5xs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material:shader_parameter/enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rp5rn"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, -0.261799, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("AnimatedSprite2D:material:shader_parameter/enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, -0.349066, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath(".:material:shader_parameter/enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f7u6t"]
_data = {
"RESET": SubResource("Animation_tb5xs"),
"hit": SubResource("Animation_rp5rn")
}

[sub_resource type="Gradient" id="Gradient_adp0o"]
offsets = PackedFloat32Array(0, 0.775758)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c7g6f"]
gradient = SubResource("Gradient_adp0o")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="torre" type="CharacterBody2D" groups=["enemy"]]
z_index = 1
material = SubResource("ShaderMaterial_fs7rs")
scale = Vector2(0.85, 0.85)
collision_layer = 2
collision_mask = 66
script = ExtResource("2_cq8xq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_6eebs")
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_ykk2w")
animation = &"idle"

[node name="eyes" type="Marker2D" parent="."]
visible = false
position = Vector2(3, -4)

[node name="LuzOlhos1" type="PointLight2D" parent="eyes"]
position = Vector2(0.545, -0.53)
scale = Vector2(0.04, 0.04)
color = Color(0.026014, 0.957764, 0.981995, 1)
energy = 2.59
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_m2761")
height = 1.0

[node name="LuzOlhos2" type="PointLight2D" parent="eyes"]
position = Vector2(3.52, -0.54)
scale = Vector2(0.04, 0.04)
color = Color(0.026014, 0.957764, 0.981995, 1)
energy = 2.59
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_m2761")
height = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(-1.19209e-07, 20)
shape = SubResource("CapsuleShape2D_igy62")

[node name="HealthComponent" parent="." instance=ExtResource("4_j1f7u")]
position = Vector2(240.902, 134.942)
maxHealth = 2

[node name="HurtboxComponent" parent="." instance=ExtResource("5_6d43k")]
light_mask = 2
visibility_layer = 2
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
light_mask = 3
visibility_layer = 3
position = Vector2(-1.19209e-07, 20)
shape = SubResource("CapsuleShape2D_8cmuq")
debug_color = Color(0.829776, 0.335805, 0.538468, 0.42)

[node name="HitboxComponent" parent="." instance=ExtResource("6_dhby3")]
collision_layer = 4
collision_mask = 2
hitStats = SubResource("Resource_5exh3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(1.42109e-14, 21.1765)
shape = SubResource("CapsuleShape2D_10w6e")

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f7u6t")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -12.9412)
scale = Vector2(2.33516, 2.33516)
color = Color(0.99993, 0.457937, 0.418301, 1)
energy = 1.28
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_c7g6f")
texture_scale = 1.7
height = 1.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
